--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
     <wb-module deploy-name="myApp">
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <wb-resource deploy-path="/" source-path="/webApp"/>
+        <wb-resource deploy-path="/" source-path="/myApp"/>
         <property name="context-root" value="myApp"/>
         <property name="java-output-path" value="/myApp/build/classes"/>
     </wb-module>
